# ThaiXplore/back-end-se/src/routes/event.routes.ts
@@ -1,8 +1,9 @@
-import { deleteEvents, registerEvent, updateEvents } from "../controllers/event.controller";
+import { deleteEvents, getEvent, registerEvent, updateEvents } from "../controllers/event.controller";
 import express from "express";
 import { isAuthenticated } from "../middlewares/isAuthentication.middleware";
 
 export default (router:express.Router) => {
+    router.get("/events/:eventId" , isAuthenticated , getEvent);
     router.post("/businesses/:businessId/events" , isAuthenticated , registerEvent);
     router.delete("/events/:eventId" , isAuthenticated , deleteEvents);
     router.put("/events/:eventId" , isAuthenticated , updateEvents);
